--- a/vignettes/Getting started.Rmd
+++ b/vignettes/Getting started.Rmd
@@ -48,6 +48,9 @@ check_and_install("tidyverse")
 check_and_install("constants")
 check_and_install("deSolve")
 check_and_install("knitr")
+check_and_install("ggdag")
+check_and_install("R6")
+check_and_install("rlang")
 ```
 
 
