--- a/vignettes/x. Solver use.Rmd
+++ b/vignettes/x. Solver use.Rmd
@@ -25,23 +25,21 @@ library(tidyverse)
 source("baseScripts/initWorld_onlyMolec.R")
 ```
 
-If you would like to instead initialize the World for particulates or microplastics, use: 
-- source("baseScripts/initWorld_onlyParticulate.R") 
-- source("baseScripts/initWorld_onlyMicroplastics.R")
+If you would like to instead initialize the World for particulates or microplastics, use: - source("baseScripts/initWorld_onlyParticulate.R") - source("baseScripts/initWorld_onlyMicroplastics.R")
 
 ## Steady state solver
 
 A steady state solver calculates the masses in each environmental compartment (i.e. air, riverwater, naturalsoil) at each scale (i.e. Regional, Continental) and for each species (U, S, A, P) when the system has reached an equilibrium.
 
-There are two ways to use the steady state solver: deterministically (solve once with one set of emissions and one set of substance variables), or probabilistically (solve multiple times, once for each run with uncertain substance variables and optionally uncertain emissions).
+There are two ways to use the steady state solver: deterministic (solve once with one set of emissions and one set of substance variables), or probabilistic (solve multiple times, once for each run with uncertain substance variables and optionally uncertain emissions).
 
 ### Use the steady state solver deterministically
 
-We already initialized the simplest version of the World in the previous chunk. This means the World was initialized for 'default substance', which behaves as a molecule.
+We already initialized the World in the previous chunk.
+This is not done for a specific substances, the World was initialized for a 'default substance', which behaves as a molecule.
 
-As we will not vary any substance variables when using the deterministic steady state solver, we only need to make a dataframe containing the emissions for 1 or more compartments. This dataframe should contain two columns: 
-- 'Abbr', which contains the abbreviations for the compartments 
-- 'Emis', which contains the emissions to the compartments, in kg/s.
+As we will not vary any substance variables when using the deterministic steady state solver, we only need to make a dataframe containing the emissions for 1 or more emission compartments.
+This dataframe should contain two columns: - 'Abbr', which contains the abbreviations for the compartments - 'Emis', which contains the emissions to the compartments, in kg/s.
 
 To see the abbreviations and their meaning, you can run \`World\$states\$asDataFrame\`.
 
@@ -54,7 +52,8 @@ emissions <- emissions |>
   mutate(Emis = Emis*1000/(365*24*60*60)) 
 ```
 
-Now we will initialize the solver, with is "SteadyODE" for all steady state calculations. Consequently, we will use the `World$Solve()` function to calculate the masses in each compartment.
+Now we will initialize the solver, with is "SteadyODE" for all steady state calculations.
+Consequently, we will use the `World$Solve()` function to calculate the masses in each compartment.
 
 ```{r Solve steady state deterministically, warning=FALSE, message=FALSE}
 # Define the solver function to use. For steady state calculations, this is always "SteadyODE"
@@ -94,12 +93,10 @@ When the World is initialized for particulates or plastics, the emissions go to 
 source('baseScripts/initWorld_onlyPlastics.R')
 ```
 
-For the probabilistic steady state solver, the emissions need to be given as a dataframe with three columns: 
-- 'Abbr', which contains the abbreviations for the compartments 
-- 'Emis', which contains the emissions to the compartments, in kg/s
-- 'RUN', which contains the run number of the emission.
+For the probabilistic steady state solver, the emissions need to be given as a dataframe with three columns: - 'Abbr', which contains the abbreviations for the compartments - 'Emis', which contains the emissions to the compartments, in kg/s - 'RUN', which contains the run number of the emission.
 
-This example uses 20 output runs of a DPFMA (Dynamic Probabilistic Material Flow Analysis) model. This data is loaded first, and then transformed to the required format. 
+This example uses 20 output runs of a DPFMA (Dynamic Probabilistic Material Flow Analysis) model.
+This data is loaded first, and then transformed to the required format.
 
 (Alternatively, if you want one set of emissions but vary the values for variables, you can use one emission dataframe as in the example for the deterministic steady state solver. Then the solver will use the same set of emissions for each run, but vary variable values.)
 
@@ -118,9 +115,12 @@ example_data <- example_data |>
   select(-To_Compartment) 
 ```
 
-Variable values can be varied over runs by specifying the variable name, the type of distribution and distribution parameters (optionally also the Species, Scale and SubCompart). To see the variable names and which other variables are needed for the value, see i.e. `World$fetchData("kdeg")`. 
+Variable values can be varied over runs by specifying the variable name, the type of distribution and distribution parameters (optionally also the Species, Scale and SubCompart).
+To see the variable names and which other variables are needed for the value, see i.e.
+`World$fetchData("kdeg")`.
 
-In the chunk below, an Excel file is read in containing the needed values for 2 variables. Consequently, a distribution is created for each row in the dataframe. 
+In the chunk below, an Excel file is read in containing the needed values for 2 variables.
+Consequently, a distribution is created for each row in the dataframe.
 
 ```{r Prepare variable df and functions ss, warning=FALSE, message=FALSE}
 # Load the Excel file containing example distributions for variablese
@@ -148,13 +148,10 @@ varFuns <- apply(Example_vars, 1, function(aRow) {
 })
 ```
 
-World$Solve needs the following variables to solve steady state probabilistically:
-- emissions: the emissions dataframe
-- var_box_df: a dataframe with the example variables 
-- var_invFun: the functions created from the var_box_df in a list
-- nRUNs: the number of runs. Should match the number of RUNs in the emissions dataframe provided
+World\$Solve needs the following variables to solve steady state probabilistically: - emissions: the emissions dataframe - var_box_df: a dataframe with the example variables - var_invFun: the functions created from the var_box_df in a list - nRUNs: the number of runs.
+Should match the number of RUNs in the emissions dataframe provided
 
-Now we can solve and get the solution, variable values, concentration and emissions. 
+Now we can solve and get the solution, variable values, concentration and emissions.
 
 ```{r Solve SS probabilistic, warning=FALSE, message=FALSE}
 # Call the steady state solver
@@ -171,6 +168,7 @@ emission = World$Emissions()
 ```
 
 Finally, we can plot the outcome using the predefined plot functions
+
 ```{r Plot the SS probabilistic outcome, warning=FALSE, message=FALSE}
 # Plot concentrations at regional scale
 World$PlotConcentration(scale = "Regional")
@@ -189,10 +187,7 @@ source('baseScripts/initWorld_onlyPlastics.R')
 
 ### Use the dynamic solver deterministically
 
-For the dynamic deterministic solver, the emissions need to be given as a dataframe with three columns: 
-- 'Abbr', which contains the abbreviations for the compartments 
-- 'Emis', which contains the emissions to the compartments, in kg/s
-- 'Timed', which contains the time of the emission in seconds.
+For the dynamic deterministic solver, the emissions need to be given as a dataframe with three columns: - 'Abbr', which contains the abbreviations for the compartments - 'Emis', which contains the emissions to the compartments, in kg/s - 'Timed', which contains the time of the emission in seconds.
 
 ```{r Test dynamic deterministic solver with emission df, warning = FALSE, message=FALSE}
 # Initialize emissions in t/y
@@ -203,14 +198,11 @@ emissions <- emissions |>
   mutate(Timed = Timed*(365.25*24*60*60)) |> ungroup()
 ```
 
-World$Solve needs the following variables to solve dynamically deterministically:
-- emissions: the emissions dataframe
-- tmax: the end time for running the solver, in seconds
-- nTIMES: the number of calculation time steps. 
+World\$Solve needs the following variables to solve dynamically deterministically: - emissions: the emissions dataframe - tmax: the end time for running the solver, in seconds - nTIMES: the number of calculation time steps.
 
-Now we can solve and get the solution, concentration and emissions. 
+Now we can solve and get the solution, concentration and emissions.
 
-```{r Solve dynamically deterministically, warning=FALSE, message=FALSE} 
+```{r Solve dynamically deterministically, warning=FALSE, message=FALSE}
 tmax <- 365.25*24*60*60*10 # 10 years in seconds
 nTIMES <- 10 # Solve 10 times
 
@@ -234,13 +226,9 @@ World$PlotSolution(scale = "Regional")
 World$PlotConcentration(scale = "Regional")
 ```
 
-## Use the dynamic solver probabilistically 
+## Use the dynamic solver probabilistically
 
-For the dynamic deterministic solver, the emissions need to be given as a dataframe with three columns: 
-- 'Abbr', which contains the abbreviations for the compartments 
-- 'Emis', which contains the emissions to the compartments, in kg/s
-- 'Timed', which contains the time of the emission in seconds,
-- 'RUN', which contains the run number of the emission.
+For the dynamic deterministic solver, the emissions need to be given as a dataframe with three columns: - 'Abbr', which contains the abbreviations for the compartments - 'Emis', which contains the emissions to the compartments, in kg/s - 'Timed', which contains the time of the emission in seconds, - 'RUN', which contains the run number of the emission.
 
 ```{r Prepare uncertain dynamic emissions, warning=FALSE, message=FALSE}
 source('baseScripts/initWorld_onlyPlastics.R')
@@ -261,7 +249,7 @@ example_data <- example_data |>
   select(-year)
 ```
 
-Prepare the variables the same way as used for the variables in the steady state probabilistic solver. 
+Prepare the variables the same way as used for the variables in the steady state probabilistic solver.
 
 ```{r Prepare variable df and functions dyn, warning=FALSE, message=FALSE}
 # Load the Excel file containing example distributions for variablese
@@ -290,16 +278,11 @@ varFuns <- apply(Example_vars, 1, function(aRow) {
 
 ```
 
-World$Solve needs the following variables to solve steady state probabilistically:
-- emissions: the emissions dataframe
-- var_box_df: a dataframe with the example variables 
-- var_invFun: the functions created from the var_box_df in a list
-- nRUNs: the number of runs. Should match the number of RUNs in the emissions dataframe provided
-- tmax: the end time for running the solver, in seconds
-- nTIMES: the number of calculation time steps. 
+World\$Solve needs the following variables to solve steady state probabilistically: - emissions: the emissions dataframe - var_box_df: a dataframe with the example variables - var_invFun: the functions created from the var_box_df in a list - nRUNs: the number of runs.
+Should match the number of RUNs in the emissions dataframe provided - tmax: the end time for running the solver, in seconds - nTIMES: the number of calculation time steps.
 
-Now we can solve and get the solution, variable values, concentration and emissions. 
-NOTE: These calculations take a bit longer than the previous calculations. 
+Now we can solve and get the solution, variable values, concentration and emissions.
+NOTE: These calculations take a bit longer than the previous calculations.
 
 ```{r Solve dyn probabilistic, warning=FALSE, message=FALSE}
 World$NewSolver("ApproxODE")
@@ -315,7 +298,7 @@ variable_values = World$VariableValues()
 concentrations = World$Concentration()
 ```
 
-An example of a plot to make with the output data: 
+An example of a plot to make with the output data:
 
 ```{r Plot outcome with uncertainty, warning=FALSE, message=FALSE}
 World$PlotConcentration(scale = "Regional", subcompart = "agriculturalsoil")
@@ -330,7 +313,9 @@ World$PlotSolution(scale = "Regional", subcompart = "agriculturalsoil")
 <!-- The first step is to define the solver to use. For all steady state calculations, this solver is named SteadyODE. -->
 
 <!-- ```{r Define solver, warning=FALSE, message=FALSE} -->
+
 <!-- World$NewSolver("SteadyODE") -->
+
 <!-- ``` -->
 
 <!-- The lhs samples are pulled from a uniform distribution between 0 and 1. So these numbers have to be scaled to the real values you want to use, and it is possible to transform this uniform distribution to a different distribution. In this example, a triangular distribution will be used. -->
@@ -340,32 +325,51 @@ World$PlotSolution(scale = "Regional", subcompart = "agriculturalsoil")
 <!-- For each variable that is uncertain you can define the distribution type (triangular, uniform or normal) and the corresponding parameters. For this example, an example excel file will be read in containing the necessary parameters for the variables we want to vary. -->
 
 <!-- ```{r Get min, max and peak value of variable values, warning=FALSE, message=FALSE} -->
+
 <!-- source("baseScripts/initWorld_onlyMolec.R") -->
+
 <!-- World$NewSolver("SteadyODE") -->
+
 <!-- # Load the Excel file containing example distributions for variables -->
 
 <!-- Example_vars <- readxl::read_xlsx("vignettes/Example_uncertain_variables.xlsx", sheet = "Variable_data") -->
 
 <!-- # Define functions for each row based on the distribution type -->
+
 <!-- varFuns <- apply(Example_vars, 1, function(aRow) { -->
+
 <!--   dist_type <- aRow["Distribution"] -->
 
 <!--   if (dist_type == "triangular") { -->
+
 <!--     prepArgs <- as.list(as.numeric(aRow[c("a", "b", "c")])) -->
+
 <!--     names(prepArgs) <- c("a", "b", "c") -->
+
 <!--   } else if (dist_type == "normal") { -->
+
 <!--     prepArgs <- as.list(as.numeric(aRow[c("a", "b")])) -->
+
 <!--     names(prepArgs) <- c("a", "b") -->
+
 <!--   } else if (dist_type == "uniform") { -->
+
 <!--     prepArgs <- as.list(as.numeric(aRow[c("a", "b")])) -->
+
 <!--     names(prepArgs) <- c("a", "b") -->
+
 <!--   } else { -->
+
 <!--     stop("Unsupported distribution type") -->
+
 <!--   } -->
 
 <!--   # Create the inverse CDF function using the prepared arguments -->
+
 <!--   World$Make_inv_unif01(fun_type = dist_type, pars = prepArgs) -->
+
 <!-- }) -->
+
 <!-- ``` -->
 
 <!-- ##### Prepare emission data -->
@@ -373,37 +377,55 @@ World$PlotSolution(scale = "Regional", subcompart = "agriculturalsoil")
 <!-- In this example, we will take a steady state emission data frame as the starting point for creating the triangular distributions. You could also directly enter the min, max and peak values if you have them. -->
 
 <!-- ```{r Create steady state emission dataframe, warning=FALSE, message=FALSE} -->
+
 <!-- # Create the steady state emission dataframe -->
+
 <!-- emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000)) -->
 
 <!-- # convert 1 t/y to si units: kg/s -->
+
 <!-- emissions <- emissions |> -->
+
 <!--   mutate(Emis = Emis*1000/(365*24*60*60)) -->
+
 <!-- ``` -->
 
 <!-- Now that the emission data frame is made, we can scale the samples we took earlier to the triangular distribution just like we did for the variables. -->
 
 <!-- ```{r Scale the emissions to the distributions, warning=FALSE, message=FALSE} -->
+
 <!-- emissions$a <- emissions$Emis * 0.7 -->
+
 <!-- emissions$b <- emissions$Emis * 1.3 -->
 
 <!-- emisFuns <- apply(rowwise(emissions) |> select(a, b, Emis), 1, function(therow){ -->
+
 <!--   abcArgs <- as.list(as.numeric(therow)) -->
+
 <!--   names(abcArgs) <- c("a", "b", "c") -->
+
 <!--   World$Make_inv_unif01("triangular", abcArgs) -->
+
 <!-- }) -->
 
 <!-- # to identify the box by Abbr -->
+
 <!-- names(emisFuns) <- emissions$Abbr -->
+
 <!-- ``` -->
 
 <!-- ```{r Test steady state uncertain solver, warning=FALSE, message=FALSE} -->
+
 <!-- # The number of samples you want to pull from the distributions for each variable -->
+
 <!-- n_samples <- 2 -->
+
 <!-- World$NewSolver("SteadyODE") -->
 
 <!-- World$Solve(emissions = emisFuns, var_box_df = Example_vars, var_invFun = varFuns, nRUNs = n_samples) -->
 
 <!-- sol <- World$Solution() -->
+
 <!-- conc <- World$Concentration() -->
+
 <!-- ``` -->
